--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://grayson-choi.github.io/advent_calendar/">
-  <meta property="og:stitle" content="스파르타코딩클럽 크리스마스 디데이 캘린더">
+  <meta property="og:stitle" content="크리스마스 디데이 캘린더">
   <meta property="og:image" content="image/OGimage.png">
   <meta property="og:description" content="크리스마스까지 하루가 기다려지는 즐거움, 크리스마스 디데이 캘린더를 함께 만들어봐요!">
-  <meta property="og:site_name" content="SCC Advent Calendar">
+  <meta property="og:site_name" content="Suzy's Advent Calendar">
   <meta property="og:locale" content="en_US">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
