--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://grayson-choi.github.io/advent_calendar/">
+  <meta property="og:url" content="https://mulddang2.github.io/Advent-Calendar/">
   <meta property="og:stitle" content="크리스마스 디데이 캘린더">
   <meta property="og:image" content="image/OGimage.png">
   <meta property="og:description" content="크리스마스까지 하루가 기다려지는 즐거움, 크리스마스 디데이 캘린더를 함께 만들어봐요!">
