--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mulddang2.github.io/Advent-Calendar/">
   <meta property="og:title" content="Suzy's Advent Calendar">
-  <meta property="og:image" content="image/OGimage.png">
-  <meta property="og:description" content="크리스마스까지 하루가 기다려지는 즐거움, 크리스마스 디데이 캘린더를 함께 만들어봐요!">
+  <meta property="og:image" content="image/card-1.png">
+  <meta property="og:description" content="미리 메리크리스마스🎄✨">
   <meta property="og:site_name" content="Suzy's Advent Calendar">
   <meta property="og:locale" content="en_US">
   <meta property="og:image:width" content="1200">
